--- a/index.html
+++ b/index.html
@@ -1,52 +1,128 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>MovementCrew - Inicio</title>
-        <link rel="stylesheet" type="text/css" href="assets/stylesheet.css">
-        <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700,700i" rel="stylesheet">
-    </head>
-    <body>
-        <header>
-            <section class="logo">
-                <a href="index.html">MovementCrew</a>
-            </section>
-            <section class="nav">
-                <ul>
-                    <li><a href="index.html" class="onthis">Inicio</a></li>
-                    <li><a href="tricks.html" class="noton">Tricks</a></li>
-                    <li><a href="tutoriales.html" class="noton">Tutoriales</a></li>
-                    <li><a href="slowmotion.html" class="noton">Slow Motion</a></li>
-                    <li><a href="redessociales.html" class="noton">Redes Sociales</a></li>
-                </ul>
-            </section>
-        </header>
-        <div id="page1">
-            <section class="p1box0">
-                <h1 class="green">Bienvenido</h1><h1 class="black"> a MovementCrew</h1><br/><br/><p>Esta es la página oficial de MovementCrew, creada por aaleexom, en la que podrás encontrar multitud de recursos para avanzar en el tricking e incluso marcarte tus propios objetivos y hacer un seguimiento de estos.</p>
-            </section>
-        </div>
-        <div id="page2">
-            <section class="p2box0">
-                <p>En esta sección podrás encontrar gran cantidad de "tricks" que quizás no conocías, con sus variantes de nombres y una pequeña demostración animada, Recuerda que puedes ayudarnos a expandir nuestra lista contactando con el correo de la web.
-                </p><br/><br/><br/>
-                <ul><li><a href="tricks.html" class="centerbox">Tricks</a></li></ul><br/><br/>
-            </section>
-            <section class="p2box1">
-                <p>En la sección de "Tutoriales" tendrás gran cantidad de recursos audiovisuales para  aprender acerca del Tricking. La mayoría de ellos, procedentes  de gente totalmente ajena a nosotros, por tanto, les damos sus merecidos créditos.
-                </p><br/><br/><br/><br/><ul><li><a href="tutoriales.html" class="centerbox">Tutoriales</a></li></ul><br/><br/>
-            </section>
-        </div>
-        <div id="page3">
-            <section class="p3box0">
-                <div class="separator">
-                    <h1 class="stylesm">Slow Motions</h1><br/><p>Está es la zona "Slow Motion", en la que podrás profundizar en todos y cada uno de los movimientos del tricking, para así, poder entender y ejecutar nuevos movimientos, o quizás simplemente, tratar de perfeccionarlos.</p><br/><br/>
-                    <ul><li><a href="slowmotion.html">¡Vamos!</a></li></ul>
-                </div>
-            </section>
-        </div>
-        <div id="page4">
-                <p>Copyright © 2017 MovementCrew | Design by: aaleexom </p>
-        </div>
-    </body>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+		<title>MovementCrew - Inicio</title>
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Raleway:300,500" rel="stylesheet">
+	</head>
+	<body>
+	    <div class="container-fluid vFull bgHead px-0">
+			<nav class="navbar navbar-expand-md navbar-dark px-5 py-0 navBg">
+		      <a class="navbar-brand logo" href="#">MovementCrew</a>
+		      <button class=" navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+		        <span class="navbar-toggler-icon"></span>
+		      </button>
+
+		      <div class="collapse navbar-collapse justify-content-end" id="navbarsExample04">
+		        <ul class="navUl">
+		          <li class="navLi text-center active">
+		            <a class="navText" href="#">Inicio<span class="btnDisabled"></span></a>
+		          </li>
+		          <li class="navLi text-center active">
+		            <a class="navText" href="#">Tutoriales</a>
+		          </li>
+		          <li class="navLi text-center active">
+		            <a class="navText" href="#">Tricks</a>
+		          </li>
+		          <li class="navLi text-center active">
+		            <a class="navText" href="#">Slow Motion</a>
+		          </li>
+		        </ul>
+		      </div>
+		    </nav>
+	    	<div class="container pvFull text-white">
+	    		<div class="row pvFull align-items-center text-center">
+	    			<div class="col px-5">
+	    				<h1 class="header-title">Bienvenido a <span class="mCtitle">MovementCrew</span></h1>
+	    				<p class="header-text">Esta es la página oficial de MovementCrew, en la que podrás encontrar multitud de recursos para avanzar en el tricking e incluso marcarte tus propios objetivos y hacer un seguimiento de estos.</p>
+	    			</div>
+	    		</div>
+	    	</div>
+	    </div>
+
+		<div class="container-fluid pvFull mx-0 px-0 videoBg">
+			<div class="video-container">
+				<video class="video-class" autoplay="true" loop="true">
+					<source src="videos/tricks.mp4" type="video/mp4"></source>
+				</video>
+			</div>
+			<div class="row blue-opacity vFullShow mx-0 px-0">
+				<div class="col-12 col-md-4 mx-0 px-0 order-2 order-md-1 d-none d-md-flex">
+					<div class="boxVideo mx-0 px-0">
+					</div>
+				</div>
+				<div class="col-12 col-md-8 clp-ph whitePoly order-1 order-md-2 align-self-center align-self-md-stretch">
+					<div class="row pvFull">
+						<div class="col-md-2 d-none d-md-flex pvFull"></div>
+						<div class="col-md-10 pvFull">
+							<div class="row pvFull align-items-center">
+								<div class="col">
+									<h1 class="roverdFont my-0 text-center">Tutoriales</h1>
+									<p class="text-justify mx-1 mx-md-5 tinyRaleway">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo consectetur iste, ea quisquam nam esse, labore necessitatibus! Suscipit corrupti quis, quam saepe autem vitae minima odit porro reprehenderit iusto, nihil perferendis. Minima beatae, quasi deserunt, hic officia soluta qui. Commodi aliquam sit molestias enim! Saepe sit tenetur odit similique ab!</p>
+									<ul class="text-center navUl my-2">
+										<li><a href="#" class="slider-btn">Tutoriales</a></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+<!-- 
+<div class="col-12 col-md-6 pvFull align-self-center order-1 order-md-2 text-center text-md-left">
+									<h1>Título</h1>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium animi quod laboriosam provident odit dolorem vel dolore consectetur neque ipsum!</p>
+								</div>
+-->
+
+
+<!--
+	    <div class="container-fluid pvFull">
+			<div class="container pvFull">
+				<div class="row pvFull align-items-center text-center">
+					<div class="col">
+						<div class="row vFullShow">
+							<div class="col-12 order-1">
+								<h1><br>Tutoriales</h1>
+							</div>
+							<div class="col-12 col-md-6 cardBoxH align-self-center order-3 order-md-2">
+								<div class="row my-2 pvFull">
+									<div class="col cardBox mx-3">
+										<div class="row align-items-center pvFull">
+											<div class="col">
+												<h1>Backflip</h1>												
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+
+
+							<div class="col-12 col-md-6 cardBoxH align-self-center order-2 order-md-3">
+								<div class="row my-2">
+									<div class="col rightBox mx-3 bg-primary">
+										<div class="row align-items-start">
+											<div class="col text-center text-md-left">
+												<h1>Frontflip</h1>
+												<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure perspiciatis consectetur maxime, vitae facere rerum odit suscipit. Recusandae, id, praesentium! Odit eum sapiente ad, nesciunt eligendi sunt id modi ab.</p>											
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+	    </div>
+-->
+ 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    	<script src="js/bootstrap.min.js"></script>
+  	</body>
 </html>
