--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 							<div class="row pvFull align-items-center">
 								<div class="col">
 									<h1 class="roverdFont my-0 text-center">Tutoriales</h1>
-									<p class="text-justify mx-1 mx-md-5 tinyRaleway">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo consectetur iste, ea quisquam nam esse, labore necessitatibus! Suscipit corrupti quis, quam saepe autem vitae minima odit porro reprehenderit iusto, nihil perferendis. Minima beatae, quasi deserunt, hic officia soluta qui. Commodi aliquam sit molestias enim! Saepe sit tenetur odit similique ab!</p>
-									<ul class="text-center navUl my-2">
-										<li><a href="#" class="slider-btn">Tutoriales</a></li>
+									<p class="text-justify mx-1 mx-md-5 tinyRaleway">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo consectetur iste, ea quisquam nam esse, labore necessitatibus! Suscipit corrupti quis, quam saepe autem vitae minima odit porro reprehenderit iusto, nihil perferendis.</p>
+									<ul class="text-center navUl py-3">
+										<li><a href="#" class="btn-strike"><span>Tutoriales</span></a></li>
 									</ul>
 								</div>
 							</div>
