--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									<h1 class="roverdFont my-0 text-center">Tutoriales</h1>
 									<p class="text-justify mx-1 mx-md-5 tinyRaleway">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo consectetur iste, ea quisquam nam esse, labore necessitatibus! Suscipit corrupti quis, quam saepe autem vitae minima odit porro reprehenderit iusto, nihil perferendis.</p>
 									<ul class="text-center navUl py-3">
-										<li><a href="#" class="btn-strike"><span>Tutoriales</span></a></li>
+										<li><a href="#" class="btn-strike"><span>¡Vamos!</span></a></li>
 									</ul>
 								</div>
 							</div>
