--- a/index.html
+++ b/index.html
@@ -49,12 +49,14 @@
 					<source src="videos/tricks.mp4" type="video/mp4"></source>
 				</video>
 			</div>
-			<div class="row blue-opacity vFullShow mx-0 px-0">
+			<div class="row blue-opacity vFullShow mx-0 px-0 absolute">
 				<div class="col-12 col-md-4 mx-0 px-0 order-2 order-md-1 d-none d-md-flex">
 					<div class="boxVideo mx-0 px-0">
 					</div>
 				</div>
-				<div class="col-12 col-md-8 clp-ph whitePoly order-1 order-md-2 align-self-center align-self-md-stretch">
+			</div>
+			<div class="row justify-content-end px-5 px-md-0">
+				<div class="col-12 col-md-8 clp-ph whitePoly order-1 order-md-2 align-self-center align-self-md-stretch vFullShow">
 					<div class="row pvFull">
 						<div class="col-md-2 d-none d-md-flex pvFull"></div>
 						<div class="col-md-10 pvFull">
@@ -73,54 +75,15 @@
 			</div>
 		</div>
 
-<!-- 
-<div class="col-12 col-md-6 pvFull align-self-center order-1 order-md-2 text-center text-md-left">
-									<h1>Título</h1>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium animi quod laboriosam provident odit dolorem vel dolore consectetur neque ipsum!</p>
-								</div>
--->
+		<div class="container vFullShow text-white bg-success">
+	    		<div class="row pvFull align-items-center text-center">
+	    			<div class="col px-5">
+	    				<h1 class="header-title">Bienvenido a <span class="mCtitle">MovementCrew</span></h1>
+	    				<p class="header-text">Esta es la página oficial de MovementCrew, en la que podrás encontrar multitud de recursos para avanzar en el tricking e incluso marcarte tus propios objetivos y hacer un seguimiento de estos.</p>
+	    			</div>
+	    		</div>
+	    	</div>
 
-
-<!--
-	    <div class="container-fluid pvFull">
-			<div class="container pvFull">
-				<div class="row pvFull align-items-center text-center">
-					<div class="col">
-						<div class="row vFullShow">
-							<div class="col-12 order-1">
-								<h1><br>Tutoriales</h1>
-							</div>
-							<div class="col-12 col-md-6 cardBoxH align-self-center order-3 order-md-2">
-								<div class="row my-2 pvFull">
-									<div class="col cardBox mx-3">
-										<div class="row align-items-center pvFull">
-											<div class="col">
-												<h1>Backflip</h1>												
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-
-
-							<div class="col-12 col-md-6 cardBoxH align-self-center order-2 order-md-3">
-								<div class="row my-2">
-									<div class="col rightBox mx-3 bg-primary">
-										<div class="row align-items-start">
-											<div class="col text-center text-md-left">
-												<h1>Frontflip</h1>
-												<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure perspiciatis consectetur maxime, vitae facere rerum odit suscipit. Recusandae, id, praesentium! Odit eum sapiente ad, nesciunt eligendi sunt id modi ab.</p>											
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-	    </div>
--->
  		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     	<script src="js/bootstrap.min.js"></script>
