--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="row justify-content-end px-5 px-md-0">
+			<div class="row justify-content-end mx-0 px-5 px-md-0">
 				<div class="col-12 col-md-8 clp-ph whitePoly order-1 order-md-2 align-self-center align-self-md-stretch vFullShow">
 					<div class="row pvFull">
 						<div class="col-md-2 d-none d-md-flex pvFull"></div>
@@ -63,7 +63,7 @@
 							<div class="row pvFull align-items-center">
 								<div class="col">
 									<h1 class="roverdFont my-0 text-center">Tutoriales</h1>
-									<p class="text-justify mx-1 mx-md-5 tinyRaleway">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo consectetur iste, ea quisquam nam esse, labore necessitatibus! Suscipit corrupti quis, quam saepe autem vitae minima odit porro reprehenderit iusto, nihil perferendis.</p>
+									<p class="text-justify tinyRaleway">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo consectetur iste, ea quisquam nam esse, labore necessitatibus! Suscipit corrupti quis, quam saepe autem vitae minima odit porro reprehenderit iusto, nihil perferendis.</p>
 									<ul class="text-center navUl py-3">
 										<li><a href="#" class="btn-strike"><span>¡Vamos!</span></a></li>
 									</ul>
@@ -75,14 +75,14 @@
 			</div>
 		</div>
 
-		<div class="container vFullShow text-white bg-success">
-	    		<div class="row pvFull align-items-center text-center">
-	    			<div class="col px-5">
-	    				<h1 class="header-title">Bienvenido a <span class="mCtitle">MovementCrew</span></h1>
-	    				<p class="header-text">Esta es la página oficial de MovementCrew, en la que podrás encontrar multitud de recursos para avanzar en el tricking e incluso marcarte tus propios objetivos y hacer un seguimiento de estos.</p>
-	    			</div>
-	    		</div>
-	    	</div>
+		<div class="container vFullShow text-white bg-primary">
+    		<div class="row pvFull align-items-center text-center">
+    			<div class="col px-5">
+    				<h1 class="header-title">Bienvenido a <span class="mCtitle">MovementCrew</span></h1>
+    				<p class="header-text">Esta es la página oficial de MovementCrew, en la que podrás encontrar multitud de recursos para avanzar en el tricking e incluso marcarte tus propios objetivos y hacer un seguimiento de estos.</p>
+    			</div>
+    		</div>
+    	</div>
 
  		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
