--- a/index.html
+++ b/index.html
@@ -75,11 +75,41 @@
 			</div>
 		</div>
 
-		<div class="container vFullShow text-white bg-primary">
+		<div class="container-fluid pvFull text-white my-0 py-0">
     		<div class="row pvFull align-items-center text-center">
-    			<div class="col px-5">
-    				<h1 class="header-title">Bienvenido a <span class="mCtitle">MovementCrew</span></h1>
-    				<p class="header-text">Esta es la página oficial de MovementCrew, en la que podrás encontrar multitud de recursos para avanzar en el tricking e incluso marcarte tus propios objetivos y hacer un seguimiento de estos.</p>
+    			<div class="col-12 col-sm-6 pvFull bgOne">
+    				<div class="bgOverlay">
+	    				<div class="row  vFullShow align-items-center text-center">
+	    					<div class="col px-3 px-sm-4 px-md-5">
+	    						<h1 class="roverdFontWhite">Tricks</h1>
+	    						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor nisi placeat vero expedita beatae cumque amet animi et iste error.</p>
+	    						<ul class="text-center navUl py-3">
+										<li><a href="#" class="btn-strike-white"><span>¡Vamos!</span></a></li>
+								</ul>
+	    					</div>
+	    				</div>
+    				</div>
+    			</div>
+    			<div class="col-12 col-sm-6 pvFull bgTwo">
+    				<div class="bgOverlay">
+	    				<div class="row  vFullShow align-items-center text-center">
+	    					<div class="col px-3 px-sm-4 px-md-5">
+	    						<h1 class="roverdFontWhite">Slow Motion</h1>
+	    						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor nisi placeat vero expedita beatae cumque amet animi et iste error.</p>
+	    						<ul class="text-center navUl py-3">
+										<li><a href="#" class="btn-strike-white"><span>¡Vamos!</span></a></li>
+								</ul>
+	    					</div>
+	    				</div>
+    				</div>
+    			</div>
+    		</div>
+    	</div>
+
+		<div class="container-fluid pvFull text-white bg-dark">
+    		<div class="row pvFull text-center">
+    			<div class="col pvFull">
+    				<p class="copyright my-0">Copyright © 2017 MovementCrew | Design by: aaleexom</p>
     			</div>
     		</div>
     	</div>
